--- a/styles.css
+++ b/styles.css
@@ -69,3 +69,18 @@ body{
 .weekday{
     height: 50px
 }
+
+.review{
+    background-color: rgb(54, 52, 75);
+    margin: 5px;
+    padding: 20px;
+    height: 250px;
+}
+
+.review-title{
+    font-size: 50px;
+}
+
+.countdown-col{
+    height: auto;
+}
