--- a/styles.css
+++ b/styles.css
@@ -3,11 +3,15 @@ body{
     color: rgb(157, 157, 167);
     background-color: rgb(42, 41, 45);
 }
+
+.container-fluid{
+    height: 70%
+}
 .carousel-item{
     background-color: rgb(73, 75, 88);
     color: rgb(191, 201, 211);
     font-size: xx-large;
-    height: 800px;
+    height: 150%;
     width: 100%;
     text-align: center;
 }
@@ -35,6 +39,14 @@ body{
 
 .float-right{
     position: absolute;
+}
+
+#calander-icon{
+    width: 16.425%;
+}
+
+#rating-icon{
+    width: 35%
 }
 
 .center{
@@ -83,4 +95,14 @@ body{
 
 .countdown-col{
     height: auto;
+}
+#disclaimer{
+    float: bottom;
+}
+#back{
+    float: top;
+    float: left;
+    width: 15px;
+    font-size:xx-large;
+    color: gray;
 }
